--- a/CarManagement/Views/Cars/Index.cshtml
+++ b/CarManagement/Views/Cars/Index.cshtml
@@ -5,7 +5,8 @@
         <h2 class="text-primary">Cars List</h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary" asp-controller="Cars" asp-action="Create">Add New Car</a>
+        <a class="btn btn-primary w-25" asp-controller="Cars" asp-action="Create">Add New Car</a>
+        <a class="btn btn-primary w-25" asp-controller="Cars" asp-action="Export">Export</a>
     </div>
 </div>
 <br />
