--- a/CarManagement/Views/Cars/Update.cshtml
+++ b/CarManagement/Views/Cars/Update.cshtml
@@ -39,7 +39,7 @@
             <label asp-for="ModelYear.Year"></label>
             <select class="form-control" asp-for="Car.YearId" asp-items="Model.YearDropDown"></select>
         </div>
-        <table width="100%">
+        <table style="width:100%">
             <tbody>
                 <tr>
                     <td>
